# My-Current-ERP

./: .antigravityignore  .env.example  .gitattributes  .gitignore  .oldApp.txt  .old_app.tsx  AGENTS.md  CURSOR_PARALLEL_WORKFLOW_MAI26_TO_53.txt  DEPLOYMENT.md  GEMINI.md  IMPLEMENTATION_REPORT.md  LAUNCH_CHECKLIST.md  MOKXYA_AI_MASTER_ARCHITECTURE_AND_CURSOR_ROADMAP_V1.txt  MOKXYA_AI_PRODUCTION_READY_EXECUTION_PLAN_V1.txt  MOKXYA_AI_WHAT_MUST_BE_DONE_NEXT_V1.txt  README.md  append-exports.cjs  append-exports2.cjs  append-exports3.cjs  append-exports4.cjs  append-exports5.cjs  append-exports6.cjs  append-exports7.cjs  apply_styles.cjs  apply_styles.py  bot.txt  build_errors.txt  cbmsService_old.ts  db_old.ts  docker-compose.yml  eslint.config.js  fix-imports.cjs  fix.cjs  fix2.cjs  fixErrors.cjs  fixErrors2.cjs  fixErrors3.cjs  fix_busyshell.cjs  fix_busyshell.js  fix_imports.cjs  (+47 more)
backend/: .env.example  __init__.py  (+1 more)
src/features/scanning/docvision-ultra/docvision-core/: CMakeLists.txt
src/features/scanning/docvision-ultra/docvision-core/android/: CMakeLists.txt  jni_bridge.cpp  jni_deskew_bridge.cpp  jni_enhancement_bridge.cpp
src/features/scanning/docvision-ultra/docvision-core/include/docvision/: binarization.hpp  core.hpp  denoising.hpp  deskew.hpp  enhancement_pipeline.hpp  glare_removal.hpp  hdr_fusion.hpp  illumination.hpp  image_utils.hpp  mfnr.hpp  panoramic_stitch.hpp  pdf_generator.hpp  perspective_correction.hpp  quality_metrics.hpp  sharpening.hpp  temporal_smoother.hpp
src/features/scanning/docvision-ultra/docvision-core/ios/: DeskewBridge.h  DeskewBridge.mm  DocVisionBridge.h  DocVisionBridge.mm  EnhancementBridge.h  EnhancementBridge.mm
src/features/scanning/docvision-ultra/docvision-core/src/: binarization.cpp  corner_refinement.cpp  denoising.cpp  deskew.cpp  enhancement_pipeline.cpp  glare_removal.cpp  hdr_fusion.cpp  illumination.cpp  image_utils.cpp  memory_hygiene.cpp  mfnr.cpp  panoramic_stitch.cpp  pdf_generator.cpp  perspective_correction.cpp  quality_metrics.cpp  sharpening.cpp  temporal_smoother.cpp
src/features/scanning/docvision-ultra/docvision-core/tests/: CMakeLists.txt  test_deskew.cpp  test_enhancement_pipeline.cpp  test_image_utils.cpp  test_memory_leaks.cpp  test_quality_metrics.cpp
(+5581 files in other folders)
